Revision history for Dist-Zilla-Plugin-ChangeStats-Dependencies-Git

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Dependency Changes]

 [Documentation]

 [Enhancements]

 [New Features]

 [Other Changes]

 [Requirements]

 [Stats]

 [Testing]

0.0100 2016-02-14T21:21:25Z UTC
 - Initial release

0.0001 Not Released
 - For test