@@ -1,6 +1,7 @@
 sudo: false
 language: perl
 perl:
+   - dev
    - '5.10'
    - '5.12'
    - '5.14'
