@@ -4,7 +4,7 @@
       "Erik Carlsson <info@code301.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.043, Dist::Iller version 0.1405, CPAN::Meta::Converter version 2.143240",
+   "generated_by" : "Dist::Zilla version 5.043, Dist::Iller version 0.1406, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "perl_5"
    ],
@@ -31,8 +31,7 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Iller" : "0.1405",
-            "Dist::Iller::Config::Author::CSSON" : "0.0304",
+            "Dist::Zilla::Plugin::Authority" : "1.009",
             "Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional" : "0",
             "Dist::Zilla::Plugin::CheckChangesHasContent" : "0",
             "Dist::Zilla::Plugin::Clean" : "0",
@@ -66,7 +65,7 @@
             "Dist::Zilla::Plugin::Prereqs::Plugins" : "0",
             "Dist::Zilla::Plugin::Readme" : "0",
             "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0",
-            "Dist::Zilla::Plugin::RewriteVersion::Transitional" : "0",
+            "Dist::Zilla::Plugin::RewriteVersion::Transitional" : "0.007",
             "Dist::Zilla::Plugin::RunExtraTests" : "0",
             "Dist::Zilla::Plugin::ShareDir" : "0",
             "Dist::Zilla::Plugin::Test::Compile" : "0",
@@ -99,6 +98,10 @@
             "Test::NoTabs" : "0",
             "Test::Pod" : "1.41",
             "Test::Warnings" : "0"
+         },
+         "suggests" : {
+            "Dist::Iller" : "0.1406",
+            "Dist::Iller::Config::Author::CSSON" : "0.0307"
          }
       },
       "runtime" : {
@@ -137,7 +140,7 @@
    "provides" : {
       "Dist::Zilla::Plugin::ChangeStats::Dependencies::Git" : {
          "file" : "lib/Dist/Zilla/Plugin/ChangeStats/Dependencies/Git.pm",
-         "version" : "0.0100"
+         "version" : "0.0101"
       }
    },
    "release_status" : "stable",
@@ -152,6 +155,7 @@
          "web" : "https://github.com/Csson/p5-Dist-Zilla-Plugin-ChangeStats-Dependencies-Git"
       }
    },
-   "version" : "0.0100"
+   "version" : "0.0101",
+   "x_authority" : "cpan:CSSON"
 }
 
