@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2016-02-14 20:27:45 UTC.
-; The follow configs were used:
-; * Dist::Iller::Config::Author::CSSON: 0.0304
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-02-17 14:01:40 UTC.
+; The following configs were used:
+; * Dist::Iller::Config::Author::CSSON: 0.0307
 
 name = Dist-Zilla-Plugin-ChangeStats-Dependencies-Git
 author = Erik Carlsson <info@code301.com>
@@ -19,12 +19,16 @@ copy = META.json
 copy = LICENSE
 copy = Makefile.PL
 
+[Authority]
+authority = cpan:CSSON
+locate_comment = 1
+
 [RewriteVersion::Transitional]
 
 [NextRelease::Grouped]
 auto_order = 0
 format_date = %{yyyy-MM-dd HH:mm:ss VVV}d
-groups = API Changes, New Features, Enhancements, Requirements, Testing, Other Changes, Bug Fixes, Documentation, Stats, Dependency Changes
+groups = API Changes, New Features, Enhancements, Requirements, Testing, Other Changes, Bug Fixes, Documentation, Stats & Dependency Changes
 
 [PodnameFromClassname]
 
@@ -114,29 +118,32 @@ release_branch = release
 [UploadToCPAN]
 
 [TravisYML]
-perl_version = 5.10 5.12 5.14 5.16 5.18 5.20 5.22
+perl_version = dev 5.10 5.12 5.14 5.16 5.18 5.20 5.22
+
+[Git::Commit / CommitBeforeTag]
+allow_dirty_match = .
+commit_msg = Release %v%n%n%c
 
 [Git::Tag]
 tag_format = %v
-tag_message =
-
-[Git::Commit]
-allow_dirty_match = .
-commit_msg = %v%n%n%c
-
-[Git::Push]
-remotes_must_exist = 1
+tag_message = Release %v%n%n%c
 
 [InstallRelease]
 install_command = cpanm .
 
 [BumpVersionAfterRelease::Transitional]
 
+[Git::Commit / CommitAfterRelease]
+allow_dirty_match = .
+commit_msg = Bump version after %v
+
+[Git::Push]
+remotes_must_exist = 1
+
 [Clean]
 
 [Prereqs / DevelopRequires]
-Dist::Iller = 0.1405
-Dist::Iller::Config::Author::CSSON = 0.0304
+Dist::Zilla::Plugin::Authority = 1.009
 Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0
 Dist::Zilla::Plugin::CheckChangesHasContent = 0
 Dist::Zilla::Plugin::Clean = 0
@@ -169,7 +176,7 @@ Dist::Zilla::Plugin::PodnameFromClassname = 0
 Dist::Zilla::Plugin::Prereqs::Plugins = 0
 Dist::Zilla::Plugin::Readme = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
-Dist::Zilla::Plugin::RewriteVersion::Transitional = 0
+Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::ShareDir = 0
 Dist::Zilla::Plugin::Test::Compile = 0
@@ -200,6 +207,10 @@ Pod::Weaver::Section::Version = 0
 Test::NoTabs = 0
 Test::Warnings = 0
 
+[Prereqs / DevelopSuggests]
+Dist::Iller = 0.1406
+Dist::Iller::Config::Author::CSSON = 0.0307
+
 [Prereqs / RuntimeRequires]
 CPAN::Changes = 0.400002
 CPAN::Changes::Group = 0
@@ -221,8 +232,7 @@ Test::DZil = 5.000
 Test::More = 0.96
 syntax = 0
 
-; authordep Dist::Iller = 0.1405
-; authordep Dist::Iller::Config::Author::CSSON = 0.0304
+; authordep Dist::Zilla::Plugin::Authority = 1.009
 ; authordep Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0
 ; authordep Dist::Zilla::Plugin::CheckChangesHasContent = 0
 ; authordep Dist::Zilla::Plugin::Clean = 0
@@ -255,7 +265,7 @@ syntax = 0
 ; authordep Dist::Zilla::Plugin::Prereqs::Plugins = 0
 ; authordep Dist::Zilla::Plugin::Readme = 0
 ; authordep Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
-; authordep Dist::Zilla::Plugin::RewriteVersion::Transitional = 0
+; authordep Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
 ; authordep Dist::Zilla::Plugin::RunExtraTests = 0
 ; authordep Dist::Zilla::Plugin::ShareDir = 0
 ; authordep Dist::Zilla::Plugin::Test::Compile = 0
